--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "build": "vite build",
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview",
-    "gen": "rm -rf src/openapi-client && openapi -i ../ConnexionUserAuthDemoApi/openapi.yaml -o src/openapi-client"
+    "gen": "./scripts/gen.sh"
   },
   "dependencies": {
     "@cloudscape-design/components": "^3.0.443",
